--- a/todomvc/package.json
+++ b/todomvc/package.json
@@ -12,9 +12,11 @@
     "lint": "run-s lint:*",
     "lint:oxlint": "oxlint . --fix",
     "lint:eslint": "eslint . --fix --cache",
-    "format": "prettier --write --experimental-cli src/"
+    "format": "prettier --write --experimental-cli src/",
+    "api": "json-server db.json"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "pinia": "^3.0.4",
     "vue": "^3.5.27",
     "vue-router": "^5.0.1"
@@ -32,10 +34,17 @@
     "eslint-plugin-vue": "~10.7.0",
     "globals": "^17.3.0",
     "jsdom": "^27.4.0",
+    "json-server": "1.0.0-beta.5",
+    "lightningcss": "^1.31.1",
     "npm-run-all2": "^8.0.4",
     "oxlint": "~1.42.0",
     "prettier": "3.8.1",
+    "rollup-plugin-visualizer": "^6.0.5",
     "vite": "^7.3.1",
+    "vite-imagetools": "^9.0.2",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-inspect": "^11.3.3",
+    "vite-plugin-pwa": "^1.2.0",
     "vite-plugin-vue-devtools": "^8.0.5",
     "vitest": "^4.0.18"
   },
