--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todomvc",
+  "name": "dashboard",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -12,8 +12,7 @@
     "lint": "run-s lint:*",
     "lint:oxlint": "oxlint . --fix",
     "lint:eslint": "eslint . --fix --cache",
-    "format": "prettier --write --experimental-cli src/",
-    "api": "json-server db.json"
+    "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
     "axios": "^1.13.4",
@@ -35,17 +34,10 @@
     "eslint-plugin-vue": "~10.7.0",
     "globals": "^17.3.0",
     "jsdom": "^27.4.0",
-    "json-server": "1.0.0-beta.5",
-    "lightningcss": "^1.31.1",
     "npm-run-all2": "^8.0.4",
     "oxlint": "~1.42.0",
     "prettier": "3.8.1",
-    "rollup-plugin-visualizer": "^6.0.5",
     "vite": "^7.3.1",
-    "vite-imagetools": "^9.0.2",
-    "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-inspect": "^11.3.3",
-    "vite-plugin-pwa": "^1.2.0",
     "vite-plugin-vue-devtools": "^8.0.5",
     "vitest": "^4.0.18"
   },
