--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
-    "@originjs/vite-plugin-federation": "^1.4.1",
+    "@module-federation/vite": "^1.11.0",
     "@playwright/test": "^1.58.1",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vitest/eslint-plugin": "^1.6.6",
