--- a/todomvc/package.json
+++ b/todomvc/package.json
@@ -42,9 +42,11 @@
     "oxlint": "~1.42.0",
     "prettier": "3.8.1",
     "rollup-plugin-visualizer": "^6.0.5",
+    "svgo": "^4.0.0",
     "vite": "^7.3.1",
     "vite-imagetools": "^9.0.2",
     "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-image-optimizer": "^2.0.3",
     "vite-plugin-inspect": "^11.3.3",
     "vite-plugin-pwa": "^1.2.0",
     "vite-plugin-vue-devtools": "^8.0.5",
